# vanth

./: .rules  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: test.yaml
.zed/: settings.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/tests/integration/: main.rs
crates/meta/: Cargo.toml
crates/meta/src/: main.rs
crates/vanth/: Cargo.toml
crates/vanth/examples/: simple.rs
crates/vanth/src/: entity.rs  hashing_serializer.rs  lib.rs  main.rs  nix.rs  store.rs
crates/vanth/tests/: derive.rs  reference.rs  store.rs  test_node.rs
crates/vanth/tests/integration/: derive.rs  main.rs  reference.rs  store.rs
crates/vanth_derive/: Cargo.toml
crates/vanth_derive/src/: lib.rs
crates/varo/: Cargo.toml  README.md
crates/varo/src/: lib.rs
crates/varo/tests/integration/: main.rs
src/: main.rs  util.rs
vanth/: Cargo.toml
vanth/src/: vanth.rs
