[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.42", features = ["derive"] }
bevy_app = "0.16.1"
bevy_ecs = "0.16.1"
bitcode = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
digest = "0.10.7"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
