[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.42", features = ["derive"] }
bevy_app = "0.16.1"
bevy_ecs = "0.16.1"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
digest = "0.10.7"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
sqlx = "0.8.6"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tempfile = "3.12.0"
rand_core = "0.6.4"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
