[package]
name = "vanth_cli"
version.workspace = true
edition.workspace = true
default-run = "vanth"

[[bin]]
name = "vanth"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
vanth = { path = "../vanth" }
tracing.workspace = true
tracing-subscriber.workspace = true
assert_cmd.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
