[package]
name = "vanth"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
bevy_ecs.workspace = true
digest.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
vanth_derive = { path = "../vanth_derive" }
rusqlite.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = { workspace = true }


[[example]]
name = "simple"
path = "examples/simple.rs"
